--- a/boxio/buttons.html
+++ b/boxio/buttons.html
@@ -11,10 +11,10 @@
         <div class="content">
             
             <form id="add-response">
+                <input type="button" class="button1" name="ROne" value="Yes">
+                <input type="button" class="button2" name="RTwo" value="No">
+                <input type="button" class="button3" name="RThree" value="Unsure">        
             </form> 
-    
-            <ul id="student-list"></ul>
-
         </div>
 
 <script>
