changes to style of login

--- a/boxio/login.html
+++ b/boxio/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form>
+    <form class="loginform">
         <h1>Login</h1>
         <fieldset>
             <a class="subname">Username:</a> <input type="text" name="username" id="name" /><br />
