Updated login, students and teacher pass are retrieved from firebase instead

--- a/boxio/login.html
+++ b/boxio/login.html
@@ -6,7 +6,9 @@
     <meta name="author" content="Boxio" />
     <meta name="description" content="blank" />
     <title>Login Screen</title>
-    <script src="login.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,5 +21,23 @@
             <input type="reset" />
         </fieldset>
     </form>
+    <script>
+        // Web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyDEQ5uWfzItrrAf9z6KwZM3YDv5UUgOt0s",
+            authDomain: "portfolio-2-boxio.firebaseapp.com",
+            databaseURL: "https://portfolio-2-boxio.firebaseio.com",
+            projectId: "portfolio-2-boxio",
+            storageBucket: "portfolio-2-boxio.appspot.com",
+            messagingSenderId: "186874167723",
+            appId: "1:186874167723:web:8af804c5e634f83b8692ee",
+            measurementId: "G-HPM59MD6Q7"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const dbl = firebase.firestore();
+    </script>
+    <script src="login.js"></script>
 </body>
 </html>
