--- a/boxio/index.html
+++ b/boxio/index.html
@@ -33,6 +33,14 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
+    var teacherdata = localStorage['teacherdata'];
+        localStorage.removeItem('teacherdata');
+        var teachername = '';
+        var teacherpass = '';
+        teacherarray = teacherdata.split(',');
+        teachername = teacherarray[0];
+        teacherpass = teacherarray[1];
+
 </script>        
 <script src="app.js"></script>
     </body>
