--- a/boxio/index.html
+++ b/boxio/index.html
@@ -1,47 +1,43 @@
-<html>
-    <head>
-        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>                
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+﻿<!DOCTYPE html>
 
-        <h1>Student response</h1>
-        <div class="content">
-            
-            <form id="add-response">
-            </form> 
-    
-            <ul id="student-list"></ul>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <meta name="author" content="Boxio" />
+    <meta name="description" content="blank" />
+    <title>Login Screen</title>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <form class="loginform">
+        <h1>Login</h1>
+        <fieldset>
+            <a class="subname">Username:</a> <input type="text" name="username" id="name" /><br />
+            <a class="subpass">Password:</a> <input type="password" name="password" id="pass" /><br />
+            <button type="button" class="enterbtn" onclick="verify()">Submit</button>
+            <input type="reset" />
+        </fieldset>
+    </form>
+    <script>
+        // Web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyDEQ5uWfzItrrAf9z6KwZM3YDv5UUgOt0s",
+            authDomain: "portfolio-2-boxio.firebaseapp.com",
+            databaseURL: "https://portfolio-2-boxio.firebaseio.com",
+            projectId: "portfolio-2-boxio",
+            storageBucket: "portfolio-2-boxio.appspot.com",
+            messagingSenderId: "186874167723",
+            appId: "1:186874167723:web:8af804c5e634f83b8692ee",
+            measurementId: "G-HPM59MD6Q7"
+        };
 
-        </div>
-
-<script>
-  // Web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDEQ5uWfzItrrAf9z6KwZM3YDv5UUgOt0s",
-    authDomain: "portfolio-2-boxio.firebaseapp.com",
-    databaseURL: "https://portfolio-2-boxio.firebaseio.com",
-    projectId: "portfolio-2-boxio",
-    storageBucket: "portfolio-2-boxio.appspot.com",
-    messagingSenderId: "186874167723",
-    appId: "1:186874167723:web:8af804c5e634f83b8692ee",
-    measurementId: "G-HPM59MD6Q7"
-  };
-
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-    var teacherdata = localStorage['teacherdata'];
-        localStorage.removeItem('teacherdata');
-        var teachername = '';
-        var teacherpass = '';
-        teacherarray = teacherdata.split(',');
-        teachername = teacherarray[0];
-        teacherpass = teacherarray[1];
-
-</script>        
-<script src="app.js"></script>
-    </body>
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const dbl = firebase.firestore();
+    </script>
+    <script src="login.js"></script>
+</body>
 </html>
