--- a/boxio/teacher.html
+++ b/boxio/teacher.html
@@ -11,10 +11,10 @@
         <div class="content">
             
             <form id="add-response">
-                <input type="button" class="button1" name="ROne" value="Yes">
-                <input type="button" class="button2" name="RTwo" value="No">
-                <input type="button" class="button3" name="RThree" value="Unsure">        
             </form> 
+    
+            <ul id="student-list"></ul>
+
         </div>
 
 <script>
@@ -33,6 +33,14 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
+    var teacherdata = localStorage['teacherdata'];
+        localStorage.removeItem('teacherdata');
+        var teachername = '';
+        var teacherpass = '';
+        teacherarray = teacherdata.split(',');
+        teachername = teacherarray[0];
+        teacherpass = teacherarray[1];
+
 </script>        
 <script src="app.js"></script>
     </body>
