--- a/boxio/index.html
+++ b/boxio/index.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Login</h1>
     <form class="loginform">
-        <h1>Login</h1>
-        <fieldset>
+        <fieldset class="loginfield">
             <a class="subname">Username:</a> <input type="text" name="username" id="name" /><br />
             <a class="subpass">Password:</a> <input type="password" name="password" id="pass" /><br />
-            <button type="button" class="enterbtn" onclick="verify()">Submit</button>
-            <input type="reset" />
+            <br />
+            <button id="loginbtn" type="button" class="enterbtn" onclick="verify()">Submit</button>
+            <button class="enterbtn" type="reset">Reset</button>
         </fieldset>
     </form>
     <script>
