--- a/boxio/admin.html
+++ b/boxio/admin.html
@@ -17,7 +17,7 @@
     <div class="content">
 
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+            <button onclick="dropDown()" class="dropbtn">Dropdown</button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
@@ -25,7 +25,6 @@
             </div>
         </div>
     </div>
-
     <script>
         // Web app's Firebase configuration
         var firebaseConfig = {
@@ -43,6 +42,7 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
         //update student name and id
+        /*
         var studentdata = localStorage['studentdata'];
         localStorage.removeItem('studentdata');
         var studentname = '';
@@ -50,6 +50,7 @@
         studentarray = studentdata.split(',');
         studentname = studentarray[0];
         studentid = studentarray[1];
+    */
     </script>
     <script src="app.js"></script>
 </body>
