haoche turn to do the js

--- a/boxio/admin.html
+++ b/boxio/admin.html
@@ -16,14 +16,18 @@
 
     <div class="content">
 
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-            </div>
-        </div>
+        <h3>Add Teacher</h3>
+        <form name="teacherForm" action="/app.js" onsubmit="return validateForm()" method="post">
+            Name: &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" name="teacherName"> <br />
+            ID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<input type="text" name="teacherId">
+            <input type="submit" value="Submit">
+        </form>
+        <h3>Add Student</h3>
+        <form name="studentForm" action="/app.js" onsubmit="return validateForm()" method="post">
+            Name: &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" name="teacherName"> <br />
+            ID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<input type="text" name="teacherId">
+            <input type="submit" value="Submit">
+        </form>
     </div>
 
     <script>
