--- a/boxio/admin.html
+++ b/boxio/admin.html
@@ -17,7 +17,7 @@
     <div class="content">
 
         <div class="dropdown">
-            <button onclick="dropDown()" class="dropbtn">Dropdown</button>
+            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
