--- a/boxio/rewards.html
+++ b/boxio/rewards.html
@@ -13,5 +13,11 @@
 </head>
 <body>
     <h1>Rewards</h1>
+    <rew>Reward No 1</rew>
+    <rew>Reward No 2</rew>
+    <rew>Reward No 3</rew>
+    <rew>Reward No 4</rew>
+    <rew>Reward No 5</rew>
+    <rew>Reward No 6</rew>
 </body>
 </html>
