Remove teacher,students function works. Checks if teacher is admin Access to admin functions as teacher

--- a/boxio/adminadd.html
+++ b/boxio/adminadd.html
@@ -20,6 +20,10 @@
         <form name="teacherForm" action="/app.js" onsubmit="return validateForm()" method="post">
             Name: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" id="teacherName"> <br />
             Password:&nbsp;&nbsp;<input type="text" id="teacherPass"> <br />
+            Admin:&nbsp;&nbsp;&nbsp;&nbsp;<select id="isAdmin">
+                <option value="true">true</option>
+                <option value="false" selected>false</option>
+            </select> <br />
             <button id="teacherbtn" type="button" class="enterbtn" onclick="addteacher()">Submit</button>
         </form>
         <h3>Add Student</h3>
@@ -49,6 +53,6 @@
         const db = firebase.firestore();
 
     </script>
-    <script src="add.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
