--- a/boxio/adminmenu.html
+++ b/boxio/adminmenu.html
@@ -18,7 +18,7 @@
         <button id="addbtn" type="button" class="addbtn" onclick="addperson()">Add Student/Teacher</button>
         <button id="deletestudentbtn" type="button" class="deletestudentbtn" onclick="deletestudent()">Remove Student Account</button>
         <button id="deleteteacherbtn" type="button" class="deleteteacherbtn" onclick="deleteteacher()">Remove Teacher Account</button>
-        <button id="btn" type="button" class="btn" onclick="backlogin()">Login</button>
+        <button id="btn" type="button" class="btn" onclick="backlogin()">Back To Login</button>
     </div>
 
     <script>
@@ -39,6 +39,6 @@
         const db = firebase.firestore();
 
     </script>
-    <script src="add.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
