--- a/boxio/teacher.html
+++ b/boxio/teacher.html
@@ -9,9 +9,14 @@
 
         <h1>Student response</h1>
         <div class="content">
-            
+            <form id = "createSession">
+                Session name: <input type="text" id ="sessionName" name="sessionName">
+                <br><br>
+                <input type="button" value="sessionButton" onclick="renderResponse()"/><br>
+            </form>            
             <form id="add-response">
             </form> 
+
     
             <ul id="student-list"></ul>
 
