--- a/boxio/session.html
+++ b/boxio/session.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <h1>Student response</h1>
+        <h1>Sessions</h1>
         <div class="content">
             <form id = "createSession">
                 Session name: <input type="text" id ="sessionName" name="sessionName">
@@ -15,6 +15,8 @@
                 <input type="button" value="sessionButton" onclick="renderResponse()"/><br>
             </form>            
             <form id="add-response">
+                <ul id="student-list"></ul>
+
             </form> 
 
     
