--- a/boxio/session.html
+++ b/boxio/session.html
@@ -15,12 +15,11 @@
                 <input type="button" value="sessionButton" onclick="renderResponse()"/><br>
             </form>            
             <form id="add-response">
-                <ul id="student-list"></ul>
+                <ul id="session-list"></ul>
 
             </form> 
 
     
-            <ul id="student-list"></ul>
 
         </div>
 
@@ -41,6 +40,6 @@
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 </script>        
-<script src="app.js"></script>
+<script src="session.js"></script>
     </body>
 </html>
