Finished session feature

--- a/boxio/student.html
+++ b/boxio/student.html
@@ -51,6 +51,6 @@
 
         document.getElementById("header").innerHTML = localStorage.getItem("sessionID");
     </script>
-    <script src="app.js"></script>
+    <script src="response.js"></script>
 </body>
 </html>
