--- a/boxio/index.html
+++ b/boxio/index.html
@@ -16,7 +16,7 @@
     <form class="loginform">
         <fieldset class="loginfield">
             <a class="subname">Username:</a> <input type="text" name="username" id="name" /><br />
-            <a class="subpass">Password:</a> <input type="password" name="password" id="pass" /><br />
+            <a class="subpass"> Password:</a> &nbsp;&nbsp;<input type="password" name="password" id="pass" /><br />
             <br />
             <button id="loginbtn" type="button" class="enterbtn" onclick="verify()">Submit</button>
             <button class="enterbtn" type="reset">Reset</button>
