Improved validation of Adding students/teachers

--- a/boxio/adminadd.html
+++ b/boxio/adminadd.html
@@ -19,7 +19,7 @@
         <h3>Add Teacher</h3>
         <form name="teacherForm" action="/app.js" onsubmit="return validateForm()" method="post">
             Name: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" id="teacherName"> <br />
-            Password:&nbsp;&nbsp;<input type="text" id="teacherPass"> <br />
+            Password:&nbsp;&nbsp;&nbsp;<input type="text" id="teacherPass"> <br />
             Admin:&nbsp;&nbsp;&nbsp;&nbsp;<select id="isAdmin">
                 <option value="true">true</option>
                 <option value="false" selected>false</option>
@@ -29,7 +29,7 @@
         <h3>Add Student</h3>
         <form name="studentForm" action="/app.js" onsubmit="return validateForm()" method="post">
             Name: &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" id="studentName"> <br />
-            ID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<input type="number" id="studentID" pattern=".{8}"> <br />
+            ID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<input type="number" id="studentID" pattern=".{8}"> <br />
             <button id="studentbtn" type="button" class="enterbtn" onclick="addstudent()">Submit</button>
         </form>
         
