--- a/boxio/teacher_admin_menu.html
+++ b/boxio/teacher_admin_menu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Selection Screen</h1>
+    <h1><a id="teachername"></a><br /></h1>
     <div class="content">
         <a id="teachername"></a><br />
         <button id="teacherbtn" type="button" class="teachbtn" onclick="teacher()">Teacher Menu</button>
