--- a/boxio/admindeleteteacher.html
+++ b/boxio/admindeleteteacher.html
@@ -3,7 +3,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
@@ -34,6 +34,6 @@
       firebase.initializeApp(firebaseConfig);
       const db = firebase.firestore();
     </script>
-    <script src="admindeleteteacher.js"></script>
+    <script src="../js/admindeleteteacher.js"></script>
 </body>
 </html>
