--- a/boxio/adminmenu.html
+++ b/boxio/adminmenu.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Boxio" />
     <meta name="description" content="blank" />
     <title>Student</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
@@ -39,6 +39,6 @@
         const db = firebase.firestore();
 
     </script>
-    <script src="../js/admin.js"></script>
+    <script src="js/admin.js"></script>
 </body>
 </html>
