--- a/boxio/index.html
+++ b/boxio/index.html
@@ -9,7 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Login</h1>
@@ -39,6 +39,6 @@
         firebase.initializeApp(firebaseConfig);
         const dbl = firebase.firestore();
     </script>
-    <script src="../js/login.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
