testing out mobile view

--- a/boxio/index.html
+++ b/boxio/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1 class="loginText">Login</h1>
-    <div class="box">
+    <div class="content">
         
     <form class="loginform">
         <img src="pictures/boxiologo.png" alt="Smiley face">
@@ -23,7 +23,7 @@
 
             <div class="question">
                 <input type="text" name="username" id="name" autocomplete="off"/>
-                <label>Email</label>
+                <label>Username</label>
               </div>
 
 
