STILL TRYING FML

--- a/boxio/index.html
+++ b/boxio/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1 class="loginText">Login</h1>
-    <div class="content">
+    <section>
         
     <form class="loginform">
         <img src="pictures/boxiologo.png" alt="Smiley face">
@@ -30,13 +30,14 @@
               <div class="question">
                 <input type="password" name="password" id="pass"/>
                 <label>Password</label>
-              </div>
+
 
 
             <!-- <a class="subname"></a> <input class="inputRcorner "type="text" name="username" id="name" placeholder="  Username" /><br />
             <a class="subpass"></a><input class="inputRcorner type="password" name="password" id="pass" placeholder="  Password" /><br />
             <br /> -->
             <button id="loginbtn" type="button" class="enterbtn" onclick="verify()">Submit</button>
+        </section>
             <!-- <button class="enterbtn" type="reset">Reset</button> -->
         </fieldset>
     </form>
