Most of the CSS

--- a/boxio/adminmenu.html
+++ b/boxio/adminmenu.html
@@ -5,16 +5,18 @@
     <meta charset="utf-8" />
     <meta name="author" content="Boxio" />
     <meta name="description" content="blank" />
-    <title>Student</title>
+    <title>Admin Menu</title>
     <link rel="stylesheet" href="css/styles.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+    <link rel="stylesheet" href="css/admin-menu.css">
 </head>
 <body>
-    <h1>Admin Menu Page</h1>
+    <h1>Admin Menu</h1>
 
-    <div class="content">
+    <div>
         <button id="addbtn" type="button" class="addbtn" onclick="addperson()">Add Student/Teacher</button>
         <button id="deletestudentbtn" type="button" class="deletestudentbtn" onclick="deletestudent()">Remove Student Account</button>
         <button id="deleteteacherbtn" type="button" class="deleteteacherbtn" onclick="deleteteacher()">Remove Teacher Account</button>
