--- a/boxio/admindeletestudent.html
+++ b/boxio/admindeletestudent.html
@@ -4,11 +4,14 @@
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/list-style.css"/>
+    <link rel="stylesheet" href="css/sessions.css"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
 
     <h1>Delete Student</h1>
-    <div class="content">
+    <div>
 
         <form id="delete-student">
         </form>
