--- a/boxio/student.html
+++ b/boxio/student.html
@@ -2,11 +2,13 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta charset="utf-8" />
     <meta name="author" content="Boxio" />
     <meta name="description" content="blank" />
     <title>Student</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/student.css">
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
