Added favicon and page title

--- a/boxio/admindeletestudent.html
+++ b/boxio/admindeletestudent.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/list-style.css"/>
     <link rel="stylesheet" href="css/sessions.css"/>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+   <link rel="icon" href="pictures/boxioicon.png" type="image/png" sizes="16x16">
+    <title>Delete Student</title>
 </head>
 <body>
 
