--- a/boxio/adminmenu.html
+++ b/boxio/adminmenu.html
@@ -12,6 +12,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
     <link rel="stylesheet" href="css/admin-menu.css">
+    <link rel="icon" href="pictures/boxioicon.png" type="image/png" sizes="16x16">
+    <title>Admin Menu</title>
 </head>
 <body>
     <h1>Admin Menu</h1>
