--- a/boxio/session-stats.html
+++ b/boxio/session-stats.html
@@ -1,11 +1,14 @@
 <html>
 <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="pictures/boxioicon.png" type="image/png" sizes="16x16">
+    <title>Session Statistics</title>
 </head>
 <body>
     <h1 id="header"></h1>
