--- a/boxio/teacher.html
+++ b/boxio/teacher.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="css/list-style.css">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
 
+        <link rel="icon" href="pictures/boxioicon.png" type="image/png" sizes="16x16">
+        <title>Session Responses</title>
+
     </head>
     <body>
 
