--- a/boxio/adminadd.html
+++ b/boxio/adminadd.html
@@ -5,16 +5,17 @@
     <meta charset="utf-8" />
     <meta name="author" content="Boxio" />
     <meta name="description" content="blank" />
-    <title>Student</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/adminadd.css">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+    <link rel="icon" href="pictures/boxioicon.png" type="image/png" sizes="16x16">
+    <title>Add Teacher/Student</title>
 </head>
 <body>
-    <h1>Admin Add Page</h1>
+    <h1>Add Student/Teacher</h1>
 
     <div class="content">
 
