--- a/boxio/student.html
+++ b/boxio/student.html
@@ -6,12 +6,13 @@
     <meta charset="utf-8" />
     <meta name="author" content="Boxio" />
     <meta name="description" content="blank" />
-    <title>Student</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/student.css">
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
+    <link rel="icon" href="pictures/boxioicon.png" type="image/png" sizes="16x16">
+    <title>Student Response</title>
 </head>
 <body>
     <h1><div id= "header"></div></h1>
