--- a/boxio/student.html
+++ b/boxio/student.html
@@ -12,6 +12,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
 </head>
 <body>
+    <div><button onclick="Goback()">Back</button></div>
+
     <h1><div id= "header"></div></h1>
     
     <div class="content">
@@ -52,5 +54,9 @@
         document.getElementById("header").innerHTML = localStorage.getItem("sessionID");
     </script>
     <script src="js/response.js"></script>
+    <script src="js/teacher-session.js"></script>
+    <script>function Goback(){
+    window.history.back()}
+    </script>
 </body>
 </html>
