should be finalised css

--- a/boxio/teacher-session.html
+++ b/boxio/teacher-session.html
@@ -14,7 +14,7 @@
 <body>
 <div><button onclick="Goback()">Back</button></div>
     <h1>Sessions<br /></h1>
-    <div class="content">
+    <div>
         <form id="add-response">
           <div class="content">
             <a>New Session Name:</a><br/>
