--- a/boxio/admindeleteteacher.html
+++ b/boxio/admindeleteteacher.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1>Delete Teacher</h1>
-    <div class="content">
+    <div>
 
         <form id="delete-teacher">
         </form>
