Remove Back button(Trouble), Fixed log out button

--- a/boxio/student.html
+++ b/boxio/student.html
@@ -15,8 +15,6 @@
     <title>Student Response</title>
 </head>
 <body>
-    <div><button onclick="Goback()">Back</button></div>
-
     <h1><div id= "header"></div></h1>
     
     <div class="content">
@@ -60,8 +58,10 @@
     </script>
     <script src="js/response.js"></script>
     <script src="js/teacher-session.js"></script>
-    <script>function Goback(){
-    window.history.back()}
+    <script> 
+    function backlogin() {
+        window.location.href = 'index.html';
+    }
     </script>
 </body>
 </html>
